tests/lean/structDefValueOverride.lean.expected.out
structDefValueOverride.lean:6:2-6:3: error: A new default value for field `x` has already been set in this structure
